<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/result"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/winOrLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="60sp"
            android:fontFamily="@font/comics_deluxe"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/comics_deluxe"
            android:text="@string/highest_score"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/comics_deluxe"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/comics_deluxe"
            android:text="@string/score"
            android:textSize="25sp" />





        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comics_deluxe"
            android:textColor="@color/black"
            android:textSize="35sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/comics_deluxe"
                android:text="@string/retry"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:drawableLeft="@drawable/baseline_restart_alt_24"/>

            <Button
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/comics_deluxe"
                android:text="@string/home"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:drawableLeft="@drawable/baseline_home_24"/>

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>